add backgrounds to maps